--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,17 @@
     <title>Covid-19 X-Ray</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css') }}" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.7/dist/css/uikit.min.css" />
   </head>
 
   <body>
+    <nav uk-navbar>
+      <div class="uk-navbar-left">
+        <a class="uk-navbar-item uk-logo" href="#">Covidxray</a>
+      </div>
+  </nav>
     {% block content %}{% endblock %}
   </body>
-
   <footer>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="{{ url_for('static',filename='main.js') }}"></script>
